# MyFFPlayerDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myffplayerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: include.h
app/src/main/cpp/include/libavutil/: hwcontext_mediacodec.h
app/src/main/cpp/player/: MediaPlayer.cpp  MediaPlayer.h  NativePlayer.cpp  NativePlayer.h  Player.h  PlayerWrapper.cpp  PlayerWrapper.h
app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.cpp  Decoder.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/audio/: AudioRender.h  OpenSLRender.cpp  OpenSLRender.h
app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  VideoRender.h
app/src/main/cpp/util/: ImageDef.h  LogUtil.cpp  LogUtil.h
app/src/main/java/com/example/myffplayerdemo/: MainActivity.java
app/src/main/java/com/example/myffplayerdemo/activity/: NativePlayerActivity.java
app/src/main/java/com/example/myffplayerdemo/media/: MyMediaPlayer.java  MySurfaceView.java
app/src/main/jniLibs/x86_64/: libfdk-aac.la
app/src/main/jniLibs/x86_64/pkgconfig/: fdk-aac.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
app/src/main/res/layout/: activity_main.xml  activity_media_player.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myffplayerdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
